--- a/original-project/css/style.css
+++ b/original-project/css/style.css
@@ -24,7 +24,7 @@ header nav a {
     text-decoration: none;
 }
 
-#home {
+#inicio {
     display: flex;
     align-items: center;
     gap: 32px;
@@ -39,12 +39,12 @@ h2 {
     margin-bottom: 32px;
 }
 
-.paragraph {
+.paragrafo {
     line-height: 150%;
     margin-bottom: 32px;
 }
 
-.button {
+.botao {
     background-color: #FF725E;
     border-radius: 8px;
     color: #FFFFFF;
@@ -52,7 +52,7 @@ h2 {
     text-decoration: none;
 }
 
-.transparent-button {
+.botao-transparente {
     background-color: transparent;
     color: #FF725E;
     padding: 16px 32px;
@@ -67,51 +67,51 @@ h2 {
     z-index: -10;
 }
 
-#clinic,
-#faq.faq  {
+#clinica,
+#duvidas {
     display: flex;
     align-items: center;
     gap: 64px;
     padding: 64px 80px;
 }
 
-#clinic li {
+#clinica li {
     margin-bottom: 16px;
     margin-left: 32px;
 }
 
-#pharmacy {
+#farmacia {
     padding: 64px 80px;
     text-align: center;
 }
 
-#pharmacy img {
+#farmacia img {
     margin: 64px auto;
 }
 
-#pharmacy .paragraph {
+#farmacia .paragrafo {
     max-width: 950px;
     margin: 0 auto;
 }
 
-.faq {
+.duvida {
     position: relative;
 }
 
-.faq h3 {
+.duvida h3 {
     border: 2px solid #FF725E;
     border-radius: 8px;
     cursor: pointer;
     padding: 24px;
 }
 
-.faq img {
+.duvida img {
     position: absolute;
     top: 32px;
     right: 24px;
 }
 
-.faq .paragraph {
+.duvida .paragrafo {
     border-right: 1px solid #FF725E;
     border-bottom: 1px solid #FF725E;
     border-left: 1px solid #FF725E;
@@ -124,7 +124,7 @@ h2 {
     transition: .2s;
 }
 
-.faq.active .paragraph {
+.duvida.ativa .paragrafo {
     padding: 24px;
     height: fit-content;
     opacity: 1;
@@ -139,7 +139,7 @@ footer {
 }
 
 footer img,
-footer .title {
+footer .titulo {
     display: block;
     font-weight: 600;
     margin-bottom: 24px;
